# desktop-cmu-graphics

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  appveyor.yml  buildspec-deploy.yaml  buildspec-deploy.yml  cmu_cpcs_utils.py  cmu_cs3_graphics.py  cmu_graphics.py  deploy.ps1  foo.py  foo2.py  groupClearTest.py  pointillism.py  project.sublime-project  pyo-test.py  pyproject.toml  sample.py  setup.py  shape_logic.py  sound.py  test.py  test_font_warnings.py  tox.ini  utils.py  viz.py  weather.py
.github/workflows/: buildwheels.yml  cibuildwheel.yml  pre-commit.yml
.travis/: build_pycairo.sh  build_release.sh  find_and_sign_binaries.py  install_global_dependencies.sh  install_python_dependencies.sh  setup_keychain.sh  zip_binaries.sh
cmu_graphics/: __init__.py  cmu_graphics.py  loader_util.py  modal.py  shape_logic.py  sound.py  updater.py  utils.py
cmu_graphics-rust/: Cargo.toml  pyproject.toml  test.py
cmu_graphics-rust/src/: lib.rs
cmu_graphics/Translation Dictionaries/: aligns.json  app_attrs.json  booleans.json  color_names.json  globals.json  gradient_starts.json  key_names.json  shape_attrs.json  strings.json  user_function_names.json
cmu_graphics/cairo/: __init__.py
cmu_graphics/cairo/modules/cairo_win_35_32/: _cairo.cp35-win32.pyd
cmu_graphics/cairo/modules/cairo_win_35_64/: _cairo.cp35-win_amd64.pyd
cmu_graphics/cairo/modules/cairo_win_36_64/: _cairo.cp36-win_amd64.pyd
cmu_graphics/cairo/modules/cairo_win_38_64/: _cairo.cp38-win_amd64.pyd
cmu_graphics/cairo_loader/: __init__.py
cmu_graphics/libs/: _martinez.cp311-win_amd64.pyd  loader_util.py  webrequest.py
cmu_graphics/libs/cairo_loader/: __init__.py
cmu_graphics/libs/certifi/: core.py
cmu_graphics/libs/cmu_graphics_helpers_loader/: __init__.py
cmu_graphics/libs/martinez/: README.md  __init__.py  boolean.py  bounding_box.py  contour.py  point.py  polygon.py  segment.py  utilities.py
cmu_graphics/libs/martinez-rust/: Cargo.toml  pyproject.toml
cmu_graphics/libs/martinez-rust/src/: lib.rs
cmu_graphics/libs/martinez/dendroid/: __init__.py  hints.py  red_black.py
cmu_graphics/libs/martinez/prioq/: __init__.py  base.py  hints.py
cmu_graphics/libs/martinez/reprit/: __init__.py  base.py  hints.py  seekers.py  serializers.py  serializers.pyi
cmu_graphics/libs/pil_image_loader/: __init__.py
cmu_graphics/libs/pygame_loader/: __init__.py
cmu_graphics/pil_image_loader/: __init__.py
cmu_graphics/pil_loader/: __init__.py
cmu_graphics/pygame/: __init__.py
cmu_graphics/pygame/modules/pygame_win_35_32/: _freetype.cp35-win32.pyd  color.cp35-win32.pyd  display.cp35-win32.pyd  image.cp35-win32.pyd  imageext.cp35-win32.pyd  joystick.cp35-win32.pyd  key.cp35-win32.pyd  mixer.cp35-win32.pyd  mixer_music.cp35-win32.pyd  mouse.cp35-win32.pyd  newbuffer.cp35-win32.pyd  overlay.cp35-win32.pyd  pixelcopy.cp35-win32.pyd  pypm.cp35-win32.pyd  rect.cp35-win32.pyd  scrap.cp35-win32.pyd  transform.cp35-win32.pyd
cmu_graphics/pygame/modules/pygame_win_35_64/: _freetype.cp35-win_amd64.pyd  cdrom.cp35-win_amd64.pyd  color.cp35-win_amd64.pyd  constants.cp35-win_amd64.pyd  display.cp35-win_amd64.pyd  event.cp35-win_amd64.pyd  fastevent.cp35-win_amd64.pyd  gfxdraw.cp35-win_amd64.pyd  image.cp35-win_amd64.pyd  imageext.cp35-win_amd64.pyd  joystick.cp35-win_amd64.pyd  key.cp35-win_amd64.pyd  mask.cp35-win_amd64.pyd  mixer.cp35-win_amd64.pyd  mixer_music.cp35-win_amd64.pyd  mouse.cp35-win_amd64.pyd  newbuffer.cp35-win_amd64.pyd  pixelarray.cp35-win_amd64.pyd  (+2 more)
cmu_graphics/pygame_loader/: __init__.py
cmu_graphics_helpers/: Cargo.toml  pyproject.toml  test.py  test_cairo.py  test_wyvern.py
cmu_graphics_helpers/src/: lib.rs
cmu_graphics_installer/cmu_graphics/: cmu_graphics.py  modal.py  shape_logic.py  sound.py
cmu_graphics_installer/cmu_graphics/libs/: webrequest.py
cmu_graphics_installer/samples/: weather.py
data/: coal.csv  gas.csv  petro.csv
documentation/: i18n.md
image_gen/: align.py  align_es.py  arcs_es.py  inspector.py  issues.py  issues_es.py  lines.py  text.py  text_es.py  to_front_back_es.py  visibility_position_2_es.py  web_only_es.py  zero_height_shapes.py
pypi_upload/: README.md
pypi_upload/cmu_graphics/: cmu_graphics.py  modal.py  shape_logic.py  sound.py
pypi_upload/cmu_graphics/libs/: loader_util.py  webrequest.py
pypi_upload/cmu_graphics/meta/: updates.json
pypi_upload/cmu_graphics/samples/: highscore.py  puffy.py
samples/: containsShape.py  gamepad.py  gamepad_tester.py  highscore.py  joystick.py  pointillism.py  puffy.py  weather.py
tests/: check_binaries.py  copy_cario.sh  full_test_image_gen.py  install.py  print_pyversion_long.py  print_pyversion_short.py  report.html  runner.py  test-scratch.py  test_autoupdate.py  test_cmu_cpcs_utils.py  test_get_text_input.py  test_image_gen.py  test_image_gen_subproc.py  test_sound.py  testall.py  testall.sh  update_image_gen.sh  utils.py  verify_codesignatures.py
tests/autoupdate/: test_autoupdate.py  update_trigger.py
tests/image_gen/: 0_Animal_pond.py  0_Beach.py  0_Bumper_cars.py  0_Bunny_with_a_spot.py  0_Cactus_party_with_sombreros.py  0_Chameleon.py  0_Chick.py  0_Circled_polygon.py  0_City_skyline.py  0_Colors_and_Gradients_Checkpoint_3.py  0_Cursor_duplication.py  0_Dot_race.py  0_Draw_two_rectangles.py  0_Etch-A-Sketch.py  0_Eyes_following_dot.py  0_Fading_background.py  0_Fancy_watch.py  0_Ferris_wheel.py  0_Fills_and_Borders_Checkpoint_1.py  0_Flag_of_Aruba.py  0_Flag_of_Mali.py  0_Flapping_wings.py  0_Flashlight.py  0_Flip_book.py  0_Free_Response.py  0_Free_Response_1.py  0_Gary_the_snail.py  0_Ghost_attack.py  0_Glasses.py  0_Hazy_sun.py  0_Jabber_jaws.py  0_Lightning.py  0_Line_art.py  0_London_and_Chicago.py  0_Magnifying_glass.py  0_Mike_Wazowski.py  0_Mirror_mouse.py  0_Nested_Conditionals_Checkpoint_4.py  0_Notes_exercise_1.py  0_Octahedron.py  (+373 more)
wyvern/: CONTRIBUTING.md  Cargo.toml  README.md  goal.py  modal.py  pyproject.toml  shape_logic.py  test.py  test_cairo.py  test_wyvern.py  utils.py
wyvern/src/: lib-old.rs  lib.rs
(+2354 files in other folders)
