[project]
name = "cmu-graphics"
dynamic = ["version"]
authors = [
    {name = "Austin Schick", email = "aschick@andrew.cmu.edu"}
]
description = "The graphics framework used by CMU CS Academy, geared toward beginner CS students."
readme = "README.md"
requires-python = ">=3.11, <3.15"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame>=2",
    "pycairo>=1.20",
]

[project.urls]
Homepage = "https://academy.cs.cmu.edu/"
Documentation = "https://academy.cs.cmu.edu/docs"

[build-system]
requires = [
    "setuptools>=42,<81", # pin <81 so that pkg_resources deprecation isn't an issue
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "cmu_graphics/meta/version.txt"}

[tool.setuptools.packages.find]
include = ["cmu_graphics", "cmu_graphics.*"]

[tool.setuptools]
py-modules = ["cmu_cpcs_utils"]

[tool.setuptools.package-data]
cmu_graphics = ["meta/version.txt", "libs/cacert.pem"]

[tool.ruff]
exclude = ["cmu_graphics/libs", "tests", "build", "samples"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"cmu_graphics/*" = ["F401", "F403", "E402"]
# {cmu_graphics.py} uses template macros (custom implementaton), so redefining
# an existing import is unavoidable
"cmu_graphics/cmu_graphics.py" = ["F811"]
"cmu_graphics/modal.py" = ["F811"]
"cmu_graphics/shape_logic.py" = ["F811"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "imageio>=2.37.0",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "pre-commit>=4.3.0",
    "psutil>=7.1.2",
    "ruff>=0.14.2",
    "tox>=4.32.0",
    "twine>=6.2.0",
]
