[package]
name = "cmu-graphics-helpers"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cmu_graphics_helpers"
crate-type = ["cdylib"]

[dependencies]
geo = "0.32.0"
geo-booleanop = "0.3.2"
geo-types = "0.7.18"

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py37"]