[package]
name = "cmu-graphics-helpers"
version = "0.1.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cmu_graphics_helpers"
crate-type = ["cdylib"]

[dependencies]
geo = "0.33.1"
geo-booleanop = "0.3.2"
geo-types = "0.7.18"
skia-safe = "0.99.0"

[dependencies.pyo3]
version = "0.29.0"
features = ["extension-module", "abi3-py38"]

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
unreachable = "deny"
todo = "deny"