[package]
name = "wyvern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wyvern"
crate-type = ["cdylib"]

[dependencies]
winit = "0.30"
skia-safe = "0.82.0"
softbuffer = "0.4.6"
bytemuck = "1.22.0"
pyo3 = "0.24.0"
