[package]
name = "wyvern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wyvern"
crate-type = ["cdylib"]

[dependencies]
winit = "0.30"
skia-safe = "0.99.0"
softbuffer = "0.4.6"
bytemuck = "1.22.0"

[dependencies.pyo3]
version = "0.29.0"
features = ["extension-module", "abi3-py39"]

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
unreachable = "deny"
todo = "deny"